src/objects/URL_Course__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This objects stores the metadata id for the custom course object record id, name.</description>
    <fields>
        <fullName>AssetCourseID__c</fullName>
        <description>Contains the metadata id of the course id field of the course lookup field on the Asset object.</description>
        <inlineHelpText>Contains the metadata id of the course id field of the course lookup field on the Asset object.</inlineHelpText>
        <label>AssetCourseID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetCourseNameID__c</fullName>
        <description>Contains the metadata id of the course name field of the course lookup field on the Asset object.</description>
        <inlineHelpText>Contains the metadata id of the course name field of the course lookup field on the Asset object.</inlineHelpText>
        <label>AssetCourseNameID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseNameID__c</fullName>
        <description>This field contains metadata id for the custom object course name field.</description>
        <inlineHelpText>This field contains metadata id for the custom object course name field.</inlineHelpText>
        <label>CourseNameID</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>RecordID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>URL_Course</label>
</CustomObject>